--- a/style.scss
+++ b/style.scss
@@ -18,6 +18,18 @@
         animation-timeline: view();
     }
 
+    .h2{
+        font-size: 36px;
+        color: white;
+        font-weight: 650;
+        padding-bottom: 5%;
+    }
+    
+    .para{
+        color: #787B83;
+        width: 60%;
+    }
+
 
     body{
         font-family: 'Raleway', sans-serif;
@@ -251,16 +263,7 @@
                 .text{
                         padding: 20% 0% 0% 50%;
 
-                    h2{
-                        font-size: 36px;
-                        color: white;
-                        font-weight: 650;
-                        padding-bottom: 5%;
-                    }
-                    p{
-                        color: #787B83;
-                        width: 60%;
-                    }
+                    
                 }
             }
         }
@@ -270,14 +273,15 @@
             flex-direction: column;
 
             div{
-                background-color: rgb(255, 255, 255);
                 height: 200px;
                 width: 300px;
                 
 
                 div{
+                    img{
+                        position: absolute;
+                    }
                     .img-1{
-                        position: relative;
                         left:200px;
                         height: 450px;
                         top: 40px;
@@ -285,11 +289,26 @@
                     }
 
                     .img-2{
-                        position: relative;
                         left: 80px;
                         top: 300px;
                         height: 300px;
                         z-index: 3;
+                    }
+                }
+
+                div{
+                    padding: 20px 0px 20px 0px;
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    gap: 20px;
+                    background-color: transparent;
+
+                    .h2{
+                    }
+                    p{
+                        color: #787B83;
+                        width: 60%;
                     }
                 }
             }
