--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@
   font-size: 36px;
   color: white;
   font-weight: 650;
-  padding-bottom: 5%;
 }
 * .para {
   color: #787B83;
@@ -28,6 +27,15 @@
 * body {
   font-family: "Raleway", sans-serif;
   background-color: #1A1923;
+}
+* body .button {
+  border: 1px solid #37335F;
+  padding: 16px 46px 16px 46px;
+  background-color: transparent;
+  color: #9EA4B2;
+  border-radius: 8px;
+  text-decoration: none;
+  max-width: 100px;
 }
 * body .Section1 {
   height: 200vh;
@@ -42,7 +50,6 @@
   width: 100%;
   height: 80px;
   align-items: center;
-  background-color: #1F222C;
   display: flex;
   flex-direction: row;
   z-index: 99;
@@ -75,21 +82,20 @@
 }
 * body .Section1 .top-color nav .nav-links ul li a::after {
   content: "";
-  background-color: rgb(26, 22, 231);
+  background-color: rgb(79, 76, 255);
   width: 100%;
   height: 2.5px;
   opacity: 0;
   display: block;
-  margin-top: 3px;
   transition: all 0.3s;
 }
 * body .Section1 .top-color nav .nav-links ul li a:hover::after {
   opacity: 1;
 }
-* body .Section1 .top-color nav .button {
+* body .Section1 .top-color nav .nav-button {
   height: 40px;
 }
-* body .Section1 .top-color nav .button .sign-up {
+* body .Section1 .top-color nav .nav-button .sign-up {
   padding: 14px 36px 14px 36px;
   color: #1F222C;
   background-color: white;
@@ -209,6 +215,8 @@
   position: relative;
   -o-object-fit: contain;
      object-fit: contain;
+  height: 400px;
+  width: 500px;
 }
 * body .Section2 .left .cover-img img {
   margin-top: 80px;
@@ -234,7 +242,10 @@
   border: white;
 }
 * body .Section2 .right .text {
-  padding: 20% 0% 0% 50%;
+  padding: 15% 0% 0% 15%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 * body .Section3 {
   background-color: #1A1923;
@@ -242,33 +253,44 @@
   flex-direction: column;
 }
 * body .Section3 div {
-  height: 200px;
-  width: 300px;
-}
-* body .Section3 div div img {
-  position: absolute;
-}
-* body .Section3 div div .img-1 {
-  left: 200px;
-  height: 450px;
-  top: 40px;
-  z-index: 1;
-}
-* body .Section3 div div .img-2 {
-  left: 80px;
-  top: 300px;
-  height: 300px;
-  z-index: 3;
+  display: flex;
+  justify-content: center;
+  height: 90vh;
+  gap: 80px;
 }
 * body .Section3 div div {
-  padding: 20px 0px 20px 0px;
+  height: 100%;
+  width: 100%;
+}
+* body .Section3 div div .cover-img {
+  height: 100%;
+  position: relative;
+  width: 400px;
+  margin-right: 60px;
+}
+* body .Section3 div div .cover-img img {
+  position: absolute;
+  height: 100%;
+}
+* body .Section3 div div .cover-img .img-1 {
+  height: 450px;
+  z-index: 1;
+  right: 40px;
+}
+* body .Section3 div div .cover-img .img-2 {
+  right: 120px;
+  height: 300px;
+  margin-top: 60px;
+  z-index: 3;
+}
+* body .Section3 div div div {
   display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 20px;
-  background-color: transparent;
+  margin-left: 30%;
 }
-* body .Section3 div div p {
+* body .Section3 div div div p {
   color: #787B83;
-  width: 60%;
+  width: 100%;
 }/*# sourceMappingURL=style.css.map */
