--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,8 @@
 *{
     margin: 0%;
+
     // border: 2px solid red;
+    
     @keyframes appear {
         0%{
             opacity: 0.7;
@@ -22,7 +24,6 @@
         font-size: 36px;
         color: white;
         font-weight: 650;
-        padding-bottom: 5%;
     }
     
     .para{
@@ -34,6 +35,16 @@
     body{
         font-family: 'Raleway', sans-serif;
         background-color: #1A1923;
+
+        .button{
+            border: 1px solid #37335F;
+            padding: 16px 46px 16px 46px;
+            background-color: transparent;
+            color: #9EA4B2;
+            border-radius: 8px;
+            text-decoration: none;
+            max-width: 100px;
+        }
 
 
         .Section1{
@@ -48,7 +59,6 @@
                 width:100%;
                 height: 80px;
                 align-items: center;
-                background-color: #1F222C;
                 display: flex;
                 flex-direction: row;
                 z-index: 99;
@@ -85,12 +95,11 @@
                             }
                             a::after{
                                 content:'';
-                                background-color: rgb(26, 22, 231);
+                                background-color: rgb(79, 76, 255);
                                 width: 100%;
                                 height: 2.5px;
                                 opacity: 0;
                                 display: block; 
-                                margin-top: 3px;
                                 transition: all 0.3s;
                             }
                             a:hover::after{
@@ -102,7 +111,7 @@
 
                 }
 
-                .button{
+                .nav-button{
                     height:40px;
 
                     .sign-up{
@@ -233,6 +242,8 @@
             .cover-img{
                 position: relative;
                 object-fit: contain;
+                height: 400px;
+                width: 500px;
 
                 img{
                     margin-top: 80px;
@@ -249,7 +260,7 @@
                     
                 }
                 .above{
-                    margin-top: 210px;
+                    margin-top:210px;
                     width: 500px;
                     z-index: 2;
                 }
@@ -261,58 +272,73 @@
                 border: white;
 
                 .text{
-                        padding: 20% 0% 0% 50%;
+                    padding: 15% 0% 0% 15%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
 
-                    
                 }
+
+                
             }
         }
         .Section3{
             background-color: #1A1923;
             display:flex;
             flex-direction: column;
+            
 
             div{
-                height: 200px;
-                width: 300px;
+                display: flex;
+                justify-content: center;
+                height: 90vh;
+                gap: 80px;
                 
-
                 div{
-                    img{
-                        position: absolute;
-                    }
-                    .img-1{
-                        left:200px;
-                        height: 450px;
-                        top: 40px;
-                        z-index: 1;
+                    height: 100%;
+                    width: 100%;
+                    
+
+                    .cover-img{
+                        height: 100%;
+                        position: relative;
+                        width: 400px;
+                        margin-right: 60px;
+
+                        img{
+                            position: absolute;
+                            height: 100%;
+
+                        }
+                        .img-1{
+                            height: 450px;
+                            z-index: 1;
+                            right: 40px;
+                        }
+
+                        .img-2{
+                            right: 120px;
+                            height: 300px;
+                            margin-top:60px ;
+                            z-index: 3;
+                        }
                     }
 
-                    .img-2{
-                        left: 80px;
-                        top: 300px;
-                        height: 300px;
-                        z-index: 3;
+                    div{
+                        display: flex;
+                        justify-content: center;
+                        flex-direction: column;
+                        gap: 20px;
+                        margin-left: 30%;
+
+                        p{
+                            color: #787B83;
+                            width: 100%;
+                        }
                     }
                 }
-
-                div{
-                    padding: 20px 0px 20px 0px;
-                    display: flex;
-                    justify-content: center;
-                    flex-direction: column;
-                    gap: 20px;
-                    background-color: transparent;
-
-                    .h2{
-                    }
-                    p{
-                        color: #787B83;
-                        width: 60%;
-                    }
-                }
+                
             }
-
         }
 
     }
