--- a/style.css
+++ b/style.css
@@ -105,15 +105,15 @@
   font-weight: 600;
 }
 * body .Section1 .top-color h1 {
-  font-size: 60px;
+  font-size: 52px;
   color: white;
   text-align: center;
   line-height: 120%;
-  padding-top: 112px;
+  padding-top: 10%;
 }
 * body .Section1 .top-color p {
   color: #9EA4B2;
-  font-size: 20px;
+  font-size: 16px;
   padding-top: 25px;
   line-height: 120%;
   text-align: center;
@@ -217,6 +217,7 @@
      object-fit: contain;
   height: 400px;
   width: 500px;
+  margin-right: 30%;
 }
 * body .Section2 .left .cover-img img {
   margin-top: 80px;
@@ -266,7 +267,7 @@
   height: 100%;
   position: relative;
   width: 400px;
-  margin-right: 60px;
+  margin-right: 180px;
 }
 * body .Section3 div div .cover-img img {
   position: absolute;
@@ -293,4 +294,49 @@
 * body .Section3 div div div p {
   color: #787B83;
   width: 100%;
+}
+* body .Testimonial {
+  color: #F2F2F2;
+  width: 100%;
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #0D0C16;
+}
+* body .Testimonial div {
+  display: flex;
+  width: -moz-fit-content;
+  width: fit-content;
+  gap: 60px;
+}
+* body .Testimonial div img {
+  height: 320px;
+  margin-right: 20px;
+}
+* body .Testimonial div div {
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  width: -moz-fit-content;
+  width: fit-content;
+  justify-content: center;
+}
+* body .Testimonial div div h4 {
+  font-family: Raleway;
+  font-size: 24px;
+  width: 520px;
+  font-weight: 400;
+}
+* body .Testimonial div div div {
+  display: flex;
+  gap: 16px;
+  width: 200px;
+}
+* body .Testimonial div div div p:nth-child(1) {
+  color: #F2F2F2;
+  font-size: 18px;
+}
+* body .Testimonial div div div p:nth-child(2) {
+  font-size: 12px;
 }/*# sourceMappingURL=style.css.map */
