--- a/style.scss
+++ b/style.scss
@@ -126,15 +126,15 @@
                 }
             }
             h1{
-                font-size: 60px;
+                font-size: 52px;
                 color: white;
                 text-align: center;
                 line-height: 120%;
-                padding-top: 112px;
+                padding-top: 10%;
             }
             p{
                 color: #9EA4B2;
-                font-size: 20px;
+                font-size: 16px;
                 padding-top: 25px;
                 line-height: 120%;
                 text-align: center;
@@ -244,6 +244,7 @@
                 object-fit: contain;
                 height: 400px;
                 width: 500px;
+                margin-right: 30%;
 
                 img{
                     margin-top: 80px;
@@ -303,7 +304,7 @@
                         height: 100%;
                         position: relative;
                         width: 400px;
-                        margin-right: 60px;
+                        margin-right: 180px;
 
                         img{
                             position: absolute;
@@ -337,6 +338,58 @@
                         }
                     }
                 }
+                
+            }
+        }
+        .Testimonial{
+            color: #F2F2F2;
+            width: 100%;
+            height: 80vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #0D0C16;
+
+            div{
+                display: flex;
+                width: fit-content;
+                gap: 60px;
+
+                img{
+                    height: 320px;
+                    margin-right: 20px;
+                }
+
+                
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 48px;
+                    width: fit-content;
+                    justify-content: center;
+
+                    h4{
+                    font-family: Raleway;
+                    font-size: 24px;
+                    width:520px;
+                    font-weight: 400;
+                    }
+                    div{
+                        display: flex;
+                        gap: 16px;
+                        width: 200px;
+
+                       p:nth-child(1){
+                        color: #F2F2F2;
+                        font-size: 18px;
+                        }
+                        p:nth-child(2){
+                            font-size: 12px;
+                        } 
+                    }
+                    
+                }
+
                 
             }
         }
