--- a/style.scss
+++ b/style.scss
@@ -372,6 +372,7 @@
                     font-family: Raleway;
                     font-size: 24px;
                     width:520px;
+                    line-height: 2.2rem;
                     font-weight: 400;
                     }
                     div{
@@ -391,6 +392,70 @@
                 }
 
                 
+            }
+        }
+
+        .Trusted{
+            width: 100%;
+            height: 60vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            align-items: center;
+
+            div{
+                display: flex;
+                flex-direction: row;
+                width: 60%;
+                gap: 40px;
+
+                div{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+
+                    h3{
+                        color: #F2F2F2;
+                        font-size: 32px;
+                        font-weight: 600;
+                    }
+                    p{
+                        color: #787B83;
+                        font-size: 14px;
+                        width: 60%;
+                    }
+                    div{
+                    }
+                    
+                }
+                .Ten{
+                    width: 300px;
+
+                    h3{
+                        color: #F2F2F2;
+                        font-size: 80px;
+                        font-family: Futura;
+                        font-weight: 600;
+                    }
+                    p{
+                        color: #787B83;
+                    }
+
+                }
+                .Seventeen{
+                    width: 300px;
+                    
+                    h3{
+                        color: #787B83;
+                        font-size: 80px;
+                        font-family: Futura;
+                        font-weight: 600;
+                    }
+                    p{
+                        color: #787B83;
+                        width: 100%;
+                    }
+                }
             }
         }
 
