--- a/style.scss
+++ b/style.scss
@@ -462,6 +462,10 @@
                         font-size: 100px;
                         font-family: Futura;
                         font-weight: 600;
+                        transition: all 1.3s cubic-bezier();
+                    }
+                    h3:hover {
+                        color: #F2F2F2;
                     }
                     p{
                         color: #787B83;
