--- a/style.css
+++ b/style.css
@@ -369,7 +369,7 @@
 }
 * body .Trusted .data .main-text div h3 {
   color: #F2F2F2;
-  font-size: 40px;
+  font-size: 44px;
 }
 * body .Trusted .data .main-text div p {
   color: #787B83;
@@ -402,13 +402,92 @@
   font-size: 100px;
   font-family: Futura;
   font-weight: 600;
-  transition: all 1.3s cubic-bezier();
 }
 * body .Trusted .data .Seventeen h3:hover {
+  transition: 0.6s ease-in-out;
   color: #F2F2F2;
 }
 * body .Trusted .data .Seventeen p {
   color: #787B83;
   font-size: 16px;
   width: 100%;
+}
+* body .Newsletter {
+  display: flex;
+  justify-content: center;
+  background-color: #0D0C16;
+  height: 60vh;
+  width: 100%;
+  color: #F2F2F2;
+  align-items: center;
+}
+* body .Newsletter .main-news {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  align-items: center;
+}
+* body .Newsletter .main-news h2 {
+  color: #F2F2F2;
+  text-align: center;
+  font-family: Raleway;
+  font-size: 44px;
+  width: 60%;
+  font-weight: 600;
+}
+* body .Newsletter .main-news .input {
+  display: flex;
+  align-items: center;
+  width: 70%;
+}
+* body .Newsletter .main-news .input input {
+  border-radius: 10px 0px 0px 10px;
+  border: 1px solid #37335F;
+  height: 100%;
+  background: transparent;
+  outline: none;
+  padding: 10px 20px 10px 10px;
+  color: #9EA4B2;
+  height: 32px;
+  width: 100%;
+}
+* body .Newsletter .main-news .input .sub-button {
+  font-size: 14px;
+  text-decoration: none;
+  border-radius: 0px 10px 10px 0px;
+  background-color: #3B38FF;
+  color: white;
+  height: -moz-max-content;
+  height: max-content;
+  width: 30%;
+  padding: 18px 24px;
+  cursor: pointer;
+}
+* body .Newsletter .main-news p {
+  color: #797C84;
+}
+* body .Trial {
+  height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+* body .Trial .main-trial {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+* body .Trial .main-trial div {
+  display: flex;
+  flex-direction: column;
+}
+* body .Trial .main-trial div h2 {
+  font-size: 44px;
+  color: #F2F2F2;
+  text-align: center;
+  font-family: Raleway;
+  width: 60%;
+  font-weight: 600;
 }/*# sourceMappingURL=style.css.map */
