--- a/style.scss
+++ b/style.scss
@@ -543,22 +543,78 @@
                 flex-direction: column;
                 justify-content: center;
                 align-items: center;
-                width:50%;
+                gap: 52px;
                 
                 div{
                     display: flex;
                     flex-direction: column;
+                    align-items: center;
                     h2{
                         font-size: 44px;
                         color: #F2F2F2;
                         text-align: center;
                         font-family: Raleway;
-                        width: 60%;
+                        width: 100%;
                         font-weight: 600;
                         
                     }
                 }
+                .trial-input{
+                    display: flex;
+                    gap: 24px;
+
+                    input{
+                        outline: none;
+                        border: 1px solid #37335F;
+                        padding: 16px 46px 16px 16px;
+                        color: #9EA4B2;
+                        width: 100%;
+                        background-color: transparent;
+                    }
+                    a{
+                        width: 100%;
+                        background-color: #3B38FF;
+                        color: #F2F2F2;
+                        text-decoration: none;
+                        padding: 16px 40px 16px 40px;
+                        align-items: center;
+                        text-align: center;
+                        border-radius:8px;
+                    }
+
+                    
+                }
+                    p{
+                        color: #797C84;
+
+                        span{
+                            a{  
+                            color: #F2F2F2;
+                            text-decoration: none;
+
+                            }
+                        }
+
+                        
+                    }
             }
+        }
+        .div-hr{
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .hr{
+                width: 65%;
+                border: 1px solid #37335F;
+                align-self: center;
+            } 
+        }
+        footer{
+            display: flex;
+            justify-content: center;
+            color: #F2F2F2;
         }
 
     }
