--- a/style.css
+++ b/style.css
@@ -536,4 +536,41 @@
   display: flex;
   justify-content: center;
   color: #F2F2F2;
+}
+* body footer .footer {
+  display: flex;
+}
+* body footer .footer .footer-1 {
+  width: 200px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+* body footer .footer .footer-1 .foot-logo {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  height: 80px;
+}
+* body footer .footer .footer-1 .footer-text {
+  color: #797C84;
+}
+* body footer .footer .footer-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+* body footer .footer .footer-links h4 {
+  color: #F2F2F2;
+}
+* body footer .footer .footer-links div {
+  display: flex;
+}
+* body footer .footer .footer-links div ul li {
+  color: #797C84;
+  list-style: none;
+}
+* body footer .footer .footer-links div ul li a {
+  text-decoration: none;
+  color: #797C84;
 }/*# sourceMappingURL=style.css.map */
