--- a/style.scss
+++ b/style.scss
@@ -613,11 +613,16 @@
         }
         footer{
             display: flex;
+            flex-direction: column;
             justify-content: center;
+            align-items: center;
+            gap: 14%;
             color: #F2F2F2;
+            height: 60vh;
 
             .footer{
                 display: flex;
+                gap: 100px;
                 
                 .footer-1{
                     width: 200px;
@@ -632,32 +637,52 @@
                     }
 
                     .footer-text{
-                    color:#797C84;
+                        color:#797C84;
+                        line-height: 1.4rem;
+                        font-size: 14px;
                     }
                 }
                 .footer-links{
                     display: flex;
                     flex-direction: column;
+                    margin-top: 28px;
                     justify-content: flex-start;
+                    gap: 28px;
                     h4{
                         color: #F2F2F2;
                     }
-                    div{
+                    .link-div{
                         display: flex;
+                        gap: 32px;
+                        
 
-                        ul li{
+                        ul {
+                            padding: 0%;
+                            display: flex;
+                            flex-direction: column;
+                            gap: 20px;
+                            
+
+                            li{
                             color: #797C84;
                             list-style: none;
+                            
     
                             a{
+                                font-size: 14px;
                                 text-decoration: none;
                                 color: #797C84;
+                            }
                             }
                         }
                     }
                     
                 }
                 
+            }
+            .copyrights{
+                color: #A79EB2;
+                font-size: 14px;
             }
         }
 
