--- a/style.scss
+++ b/style.scss
@@ -46,7 +46,7 @@
             max-width: 100px;
         }
 
-
+        
         .Section1{
             height:200vh;
             width: 100%;
@@ -65,6 +65,7 @@
                 justify-content: center;
                 gap: 250px;
 
+                
                 .logo-img{
 
                     img{
@@ -686,5 +687,67 @@
             }
         }
 
+    }
+}
+
+
+@media screen and (max-width: 1025px){
+    body{
+        .Section1{
+            .top-color{
+                nav{
+                    gap:40px;
+                    .logo-img{
+                        img{
+                            height: 24px;
+                        }
+                    }
+                    
+                    .nav-links{
+                        font-size: 1px;
+                    }
+
+                    .nav-button{
+                        align-items: center;
+                        .sign-up{
+                            padding: 8px 10px ;
+                            font-size: 12px;
+                            align-items: center;
+                        }
+                    }
+                }
+                
+                h1{
+                    font-size: 36px;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 680px){
+    body{
+        .Section1{
+            .top-color{
+                nav{
+                    gap:40px;
+                    justify-content: flex-start;
+                    
+
+                    .logo-img{
+                        margin-left: 20px;
+                        
+                        img{
+                            height: 22px;
+                        }
+                    }
+                    
+                    .nav-links{
+                        display: none;
+                    }
+
+                }
+            }
+        }
     }
 }
