Logo Responsive Gap

--- a/style.scss
+++ b/style.scss
@@ -722,6 +722,14 @@
                     font-size: 12px;
                 }
             }
+
+            .bottom-color{
+                .logo-images{
+                    .comp{
+                        gap: 40px;
+                    }
+                }
+            }
         }
     }
 }
