--- a/style.css
+++ b/style.css
@@ -618,6 +618,9 @@
   body .Section1 .top-color p {
     font-size: 12px;
   }
+  body .Section1 .bottom-color .logo-images .comp {
+    gap: 40px;
+  }
 }
 @media screen and (max-width: 680px) {
   body .Section1 .top-color nav {
